# fit-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  types.semi.csv
benches/: bench_read_file.rs  read_file.rs
data/: 2015-06-09-17-30-49.fit  2015-06-09-21-12-06.fit  2015-06-09-21-14-34.fit  2015-06-13-11-42-08.fit  2015-07-12-12-32-04.fit  2015-07-14-08-01-12.fit  2015-07-14-16-52-48.fit  2015-07-14-22-26-34.fit  2015-07-15-08-08-23.fit  2015-07-16-08-02-49.fit  2015-07-16-17-52-46.fit  2015-07-18-12-04-09.fit  2015-07-19-13-54-16.fit  2015-07-20-12-09-25.fit  2015-07-22-15-25-22.fit  2015-07-23-13-17-54.fit  2015-08-01-12-32-15.fit  2015-08-06-17-02-29.fit  2015-08-08-11-47-14.fit  2015-08-10-16-46-42.fit  2015-08-11-16-57-49.fit  2015-08-11-21-49-47.fit  2015-08-11-22-36-58.fit  2015-08-21-08-31-33.fit  2015-08-21-16-45-06.fit  2015-08-23-10-12-24.fit  2015-08-28-08-18-42.fit  2015-08-28-16-54-24.fit  2015-08-30-10-49-57.fit  2015-09-03-08-22-21.fit  2015-09-03-17-09-23.fit  2015-09-10-17-00-40.fit  2015-09-13-11-41-20.fit  2015-09-17-17-30-47.fit  2015-09-27-13-34-35.fit  2015-10-03-11-23-41.fit  2015-10-10-10-18-22.fit  2015-10-11-14-24-59.fit  2016-02-08-23-38-56.fit  2016-03-12-11-30-03.fit  (+40 more)
examples/: fetch_session.rs  iterate_records.rs  show_message_counts.rs  show_messages.rs
fit/: Cargo.toml  build.rs
fit/benches/: read_file.rs
fit/examples/: fetch_session.rs  iterate_records.rs  show_message_counts.rs
fit/src/: data_field.rs  definition_record.rs  error.rs  fit_file.rs  iterators.rs  lib.rs  main.rs  message.rs  reader.rs
src/: bin.rs  (+16 more)
(+41 files in other folders)
