[package]
name = "fit"
version = "0.1.0"
license = "MIT"
authors = ["Richard Brodie <richard@radagast.nu>"]
edition = "2018"
documentation = "https://docs.rs/fit"
repository = "https://github.com/richardbrodie/fit-rs"
build = "build.rs"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.6.0"
criterion = "0.2"

[build-dependencies]
heck = ""
csv = "^1.0.5"

[profile.release]
codegen-units = 1
incremental = false

[[example]]
name = "show_messages"
path = "examples/show_messages.rs"

[[example]]
name = "iterate_records"
path = "examples/iterate_records.rs"

[[bench]]
name = "read_file"
harness = false

