[package]
name = "new-fit"
version = "0.1.0"
authors = ["Richard Brodie <richard@radagast.nu>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "read_fit"
path = "src/main.rs"

[dependencies]
memmap = "0.7.0"

[dev-dependencies]
criterion = ""

[build-dependencies]
csv = "^1.0"
heck = "^0.3"

[[bench]]
name = "read_file"
harness = false

[profile.release]
debug = true
opt-level = 3
codegen-units = 1
